<resources>
    <string name="app_name">RS Notes Example</string>
    <string name="add_note_button">Add note button</string>
    <string name="add">Add</string>
    <string name="title">Notes</string>
    <string name="name_is_blank">Input title for note</string>
    <string name="high">Hight</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="priority_hight">Priority: hight</string>
    <string name="priority_normal">Priority: normal</string>
    <string name="priority_low">Priority: low</string>
    <string name="settings">Settings</string>
    <string name="enter_title">Enter title...</string>
    <string name="enter_text">Enter text...</string>
    <string name="update">update</string>
    <string name="edit_note">Edit note</string>
    <string-array name="entries">
        <item>Title</item>
        <item>Text</item>
        <item>Priority</item>
    </string-array>
    <string-array name="entriesValues">
        <item>name</item>
        <item>text</item>
        <item>priority</item>
    </string-array>
    <string-array name="dsEntries">
        <item>Room</item>
        <item>Cursor</item>
    </string-array>
    <string-array name="dsValues">
        <item>room</item>
        <item>cursor</item>
    </string-array>
</resources>